--- a/InitialProject/InitialProject/View/Guest2/Notifications.xaml
+++ b/InitialProject/InitialProject/View/Guest2/Notifications.xaml
@@ -8,8 +8,12 @@
         Title="Notifications" Height="700" Width="1300"
         WindowStartupLocation="CenterScreen">
     <Grid>
-        <DataGrid x:Name="DataPanel" HorizontalAlignment="Left" Height="338" Margin="180,186,0,0" VerticalAlignment="Top" Width="1010" Loaded="LoadData"/>
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="1227,623,0,0" VerticalAlignment="Top" Click="Exit" Width="47" Height="33"/>
+        <DataGrid x:Name="DataPanel" AutoGenerateColumns="False" Loaded="LoadData" Margin="163,197,163,177">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="*" Header="Name" Binding="{Binding Name}"/>
+                <DataGridTextColumn Width="*" Header="Status" Binding="{Binding Status}"/>
+            </DataGrid.Columns>
+        </DataGrid>        <Button Content="Exit" HorizontalAlignment="Left" Margin="1227,623,0,0" VerticalAlignment="Top" Click="Exit" Width="47" Height="33"/>
         <ToolBar Grid.Row="0" Height="39" VerticalAlignment="Top">
             <Button Click="OpenGuestOverview">
                 <StackPanel Orientation="Horizontal" Width="53">
