--- a/InitialProject/InitialProject/View/SignInForm.xaml
+++ b/InitialProject/InitialProject/View/SignInForm.xaml
@@ -14,7 +14,7 @@
             <RowDefinition Height="60"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="1" Grid.Column="0" Width="300" Height="100" Margin="75,50,75,0">
+        <Grid Grid.Row="1" Grid.Column="0" Height="100" Margin="75,50,74,0">
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
@@ -26,8 +26,8 @@
 
             <Label Grid.Row="0" Grid.Column="0" Height="30">Username:</Label>
             <Label Grid.Row="1" Grid.Column="0" Height="30">Password:</Label>
-            <TextBox Grid.Row="0" Text="{Binding Path=Username, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Height="25" TextWrapping="Wrap" VerticalAlignment="Center"/>
-            <PasswordBox Name="txtPassword" Grid.Row="1" Grid.Column="1" Height="25" VerticalAlignment="Center"/>
+            <TextBox Text="{Binding Path=Username, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Height="26" TextWrapping="Wrap" VerticalAlignment="Center" Margin="0,0,10,0"/>
+            <PasswordBox Name="txtPassword" Grid.Row="1" Grid.Column="1" Height="26" VerticalAlignment="Center" Margin="0,0,10,0"/>
         </Grid>
 
         <Button Grid.Row="2" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="60"/>
